--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_profile">Profile</string>
     <string name="menu_activity">Activity</string>
     <string name="menu_logout">Logout</string>
+    <string name="menu_attendance">Attendance</string>
 
     <string name="gps_network_not_enabled">gps not enabled</string>
     <string name="take_image">Take Image</string>
