--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,13 @@
     <string name="menu_activity">Activity</string>
     <string name="menu_logout">Logout</string>
     <string name="menu_attendance">Attendance</string>
-
+    <string name="menu_leaflet">Leaflet</string>
     <string name="gps_network_not_enabled">gps not enabled</string>
     <string name="take_image">Take Image</string>
     <string name="take_image_done">Take Image(Done)</string>
     <string name="crash_toast_text">Crushed!</string>
 
-    <string name="version">Version: 1.1</string>
+    <string name="version">Version: 1.2</string>
     <string name="user_type">For Fresh campaign users only</string>
     <string name="maps_api_key">AIzaSyCJUrup2ifisnMCMcq3_bFSaatCrnASDL4</string>
 </resources>
